# pyjlink

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  setup.py.bak  tox.ini
.github/workflows/: test.yml
docs/: about.rst  cli.rst  conf.py  index.rst  installation.rst  jlink.sym  pyjlink.bindings.rst  pyjlink.extras.rst  pyjlink.protocols.rst  pyjlink.rst  pyjlink.unlockers.rst  pylink.bindings.rst  pylink.extras.rst  swd.rst  troubleshooting.rst  tutorial.rst
examples/: README.md  connect.py  core.py  endian.py  jtag.py  memory.py  open.py  probe.py  pyjlink-rtt  pyjlink-rtt.py  pyjlink-swv.py  pylink-swv  strace.py  swd.py  windows_update.py
pyjlink/: __init__.py  __main__.py  binpacker.py  decorators.py  enums.py  errors.py  jlink.py  jlock.py  library.py  registers.py  structs.py  threads.py  util.py  utils.py
pyjlink/protocols/: swd.py
pyjlink/unlockers/: __init__.py  unlock_kinetis.py
tests/: README.md  __init__.py
tests/functional/features/: environment.py  utility.py
tests/functional/features/jlink/: memory.feature  register.feature
tests/functional/features/steps/: common.py  debug.py  licenses.py  memory.py  registers.py  rtt.py  swo.py  unlock.py  update.py
tests/unit/: test_binpacker.py  test_decorators.py  test_enums.py  test_errors.py  test_jlink.py  test_jlock.py  test_library.py  test_main.py  test_structs.py  test_threads.py  test_util.py
tests/unit/protocols/: test_swd.py
tests/unit/unlockers/: test_unlock.py  test_unlock_kinetis.py
(+3 files in other folders)
